--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.1.3",
+    "react-spinners": "^0.15.0",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
