--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.1.3",
     "react-spinners": "^0.15.0",
-    "tailwindcss": "^4.0.1"
+    "tailwindcss": "^4.0.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
