refactor : name 수정

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "진지잡수 | 경기도 내의 어르신을 대상으로 하는 무료급식소 현황",
+  "name": "진지잡수 - 경기도 내의 어르신을 대상으로 하는 무료급식소 현황",
   "short_name": "진지잡수",
   "start_url": "/",
   "display": "standalone",
